# cross-testing

./: .gitignore  Makefile  Readme.md
cpp/: Makefile  meson.build
cpp/tests/: general_tests.cpp  math_utils_test.cpp
rust/: Cargo.toml  Makefile
rust/add/src/: lib.rs
rust/sub/src/: inner.rs  lib.rs
